# CAMO

./: .gitignore  .pdm-python  LICENSE  Makefile  README.md  pyproject.toml
configs/: train.yaml
configs/experiment/: burgers.yaml  burgers_optuna.yaml  legion_test.yaml  shanhe_test.yaml  thinkpad_test.yaml
configs/hparams_search/: burgers_optuna.yaml
configs/hydra/: ray.yaml  slurm.yaml
configs/local/: shanhe.yaml
configs/model/: camo.yaml
docker/: Dockerfile
docker/files/: condarc_shanhe  create_mysql.sql  entrypoint.sh  gres.conf  mysql.cnf  pip_shanhe.conf  slurm.conf  sources.list  sources_shanhe.list
scripts/: aimup.sh  burgers_1d_exps_lr_nhead.sh  burgers_optuna.sh
src/data/components/: __init__.py  burgers.py
src/models/: CAMO_module.py  __init__.py  operatorformer_module.py
src/models/components/: __init__.py  camo.py  dataclass_config.py
src/models/components/attention/: standard_self_attention.py
src/models/components/encoder/: modules.py
src/utils/: __init__.py  check_net_nan.py
tests/: fix_network.py  test_for_train.py
