[project]
name = "CAMO"
version = "0.2.0"
description = "Operator Learning for Partial Differential Equations with Attention Mechanism"
authors = [
    {name = "Chengrui Zhang", email = "jczhang@live.it"},
]
dependencies = [
    "torch==2.3.0",
    "lightning>=2.2.4",
    "torchmetrics>=1.4.0.post0",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "tensorboard>=2.16.2",
    "rootutils>=1.0.7",
    "rich>=13.7.1",
    "einops>=0.8.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
utils = [
    "pre-commit>=3.7.1",
    "pytest>=8.2.1",
    "bcolors==1.0.2",
]
slurm = [
    "hydra-submitit-launcher>=1.2.0",
    "hydra-slurm-rich-launcher>=1.0.0",
]
[tool.pdm]
distribution = false

[tool.pyright]
root = ["src"]
include = [
    "src"
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]


[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
