[project]
name = "CAMO"
version = "0.1.0"
description = "Operator Learning for Partial Differential Equations with Attention Mechanism"
authors = [
    {name = "Chengrui Zhang", email = "jczhang@live.it"},
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "torch @ https://download.pytorch.org/whl/cu118/torch-2.1.2%2Bcu118-cp311-cp311-linux_x86_64.whl",
    "lightning>=2.2.5",
    "torchmetrics>=1.4.0.post0",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "rootutils>=1.0.7",
    "rich>=13.7.1",
    "einops>=0.8.0",
]



[project.optional-dependencies]
utils = [
    "bcolors==1.0.2",
    "pre-commit>=3.7.1",
    "pytest>=8.2.1",
]
visualization = [
    "tensorboard>=2.16.2",
    "aim>=3.19.3",
]
slurm = [
    "hydra-submitit-launcher>=1.2.0",
    "hydra-slurm-rich-launcher>=1.0.0",
]
[tool.pdm]
distribution = false

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cu118"
name = "torch"


[tool.pyright]
root = ["src"]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Linux"
executionEnvironments = [
  { root = ".", extraPaths = ["src/utils" ]},
]


[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]


[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
